fix white space in firefox for background image on scrolldown

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,9 @@
 body{
-  background: url('../images/city-lights.jpg');
+  background: url('../images/city-lights.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
-  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -48,10 +49,14 @@ h3{
 
 .container{
   background-color: #FFF;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   width: 80%;
-  height: 80%;
-  margin: 5% auto;
+  height: 70%;
   padding: 2%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
